--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Paulo\\AppData\\Roaming\\NetBeans\\8.2rc\\build.properties
+user.properties.file=C:\\Users\\Dell\\AppData\\Roaming\\NetBeans\\11.2\\build.properties
