Conexão com banco e adicionado novas telas

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,11 +33,15 @@ dist.jar=${dist.dir}/LojaDino.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.mysql-connector-java-5.1.47.jar=..\\..\\..\\Downloads\\mysql-connector-java-5.1.47.jar
+file.reference.mysql-connector-java-5.1.47.jar-1=..\\..\\mysql-connector-java-5.1.47.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${libs.Driver_JDBC_do_MySQL.classpath}
+    ${libs.Driver_JDBC_do_MySQL.classpath}:\
+    ${file.reference.mysql-connector-java-5.1.47.jar}:\
+    ${file.reference.mysql-connector-java-5.1.47.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
